<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_days"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ashwingairola.attendfree.DaysActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="Select a day to view schedule for: "
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/blue_button"
            android:text="@string/monday"
            android:id="@+id/monday_button"
            android:onClick="onClickDayButton" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/blue_button"
            android:text="@string/tuesday"
            android:id="@+id/tuesday_button"
            android:onClick="onClickDayButton" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/blue_button"
            android:text="@string/wednesday"
            android:id="@+id/wednesday_button"
            android:onClick="onClickDayButton" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/blue_button"
            android:text="@string/thursday"
            android:id="@+id/thursday_button"
            android:onClick="onClickDayButton" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/blue_button"
            android:text="@string/friday"
            android:id="@+id/friday_button"
            android:onClick="onClickDayButton" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/blue_button"
            android:text="@string/saturday"
            android:id="@+id/saturday_button"
            android:onClick="onClickDayButton" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@drawable/blue_button"
        android:text="@string/back"
        android:onClick="onClickBackButton"/>
</LinearLayout>
