<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_starter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_purple"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ashwingairola.attendfree.StarterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/welcome_app_setup"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@android:color/white"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:stretchColumns="1"
        android:layout_weight="1">

        <TableRow>

            <TextView
                android:text="@string/username"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/username"
                android:inputType="textPersonName"
                android:background="@drawable/background_white"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"/>
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/institution"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/institution"
                android:inputType="textPersonName"
                android:background="@drawable/background_white"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"/>
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/designation"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/designation"
                android:inputType="textPersonName"
                android:background="@drawable/background_white"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"/>
        </TableRow>

        <TableRow>

            <TextView android:text="@string/num_of_subjects"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/num_of_subjects"
                android:inputType="number"
                android:background="@drawable/background_white"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"/>
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/classes_per_day"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/classes_per_day"
                android:inputType="number"
                android:background="@drawable/background_white"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"/>
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/min_percentage"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/min_percentage"
                android:inputType="numberDecimal"
                android:background="@drawable/background_white"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"/>
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@android:color/black"
            android:enabled="false"
            android:id="@+id/next_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/red_button"
            android:onClick="onClickNextButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textColor="@android:color/black"
            android:id="@+id/reset_button"
            android:layout_alignParentBottom="true"
            android:background="@drawable/red_button"
            android:onClick="onClickResetButton" />
    </RelativeLayout>
</LinearLayout>
